2009-12-21  Dominik Honnef  <dominikho@gmx.net>

	* lib/weechat/info.rb: fixed comments
	* lib/weechat/command.rb: fixed comments
	* lib/weechat/modifier.rb: fixed comments

	* lib/weechat/script.rb (Weechat::Script::Skeleton::InstanceMethods#weechat_init):
	fixed version comparison

	* Rakefile: bumped version to 0.0.2
	* lib/weechat.rb (Weechat): bumped version to 0.0.2

	* lib/weechat/channel.rb (Weechat::IRC::Channel#nicks): added support for users
	* lib/weechat/host.rb (Weechat::IRC::Host): added support for users
	* lib/weechat/user.rb (Weechat::IRC::User): added support for users

	* lib/weechat/channel.rb (Weechat::IRC::Channel#join)
	(Weechat::IRC::Channel#rejoin): added support for channel
	passwords
	(Weechat::IRC::Channel#command, Weechat::IRC::Channel#send): added
	support for sending commands/messages to channels

	* lib/weechat/pointer.rb (Weechat::Pointer#initialize): fixed
	pointer comparison

	* lib/weechat/script/config.rb (Weechat::Script::Config#set):
	fixed memory leak
	* lib/weechat/properties.rb (Weechat::Properties::InstanceMethods#set_property):
	fixed memory leak
	* lib/weechat/option.rb (Weechat::Option): fixed memory leak
	* lib/weechat/property.rb (Weechat::Property): fixed memory leak

2009-12-18  Dominik Honnef  <dominikho@gmx.net>

	* lib/weechat/channel.rb (Weechat::IRC::Channel): added support
	for channels
	* lib/weechat/buffer.rb (Weechat::Buffer#channel)
	(Weechat::Buffer#channel?): added support for channels

	* lib/weechat.rb (Weechat::Helper#get_buffer): put logic of
	determining buffer into own method, changed methods accordingly
	(Weechat::Helper#puts_y): added support for print_y

	* lib/weechat/server.rb (Weechat::IRC::Server#initialize): use a
	proper exception use existing properties architecture

	* lib/weechat/buffer.rb: style changes wrt exceptions
	* lib/weechat/properties.rb: style changes wrt exceptions
	(Weechat::Properties::InstanceMethods#valid_property): fixed check
	for values that are false